Data race between setParameter and reads of gEnableDetailedConnectionHealthMetricLogLines

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v7.2
    • Service Arch 2023-11-13
    • 131
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The server parameter gEnableDetailedConnectionHealthMetricLogLines is accessed throughout the codebase in unsynchronized ways, but it can be written to at any time by a setParameter command. We should ensure that all accesses of this parameter are synchronized to avoid data races.

            Assignee:
            Patrick Freed
            Reporter:
            Patrick Freed
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: