SERVER-82872 Update access of gEnableDetailedConnectionHealthMetricLogLines to be atomic

GitOrigin-RevId: 531a4886ffc7000cbad2efae47baeccf3b370c45